--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-react-svg": "^3.3.0",
     "postcss": "^8.4.28",
+    "puppeteer": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3"
