--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "pdf:gen": "node ./scripts/pdf.js"
   },
   "dependencies": {
     "@fontsource/pt-serif": "^5.0.10",
