--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fontsource/pt-serif": "^5.0.10",
     "autoprefixer": "^10.4.15",
+    "clsx": "^2.0.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-react-svg": "^3.3.0",
